# Genai-Report-Generator

./: .gitignore  docker-compose.yaml  gen ai report generator.txt  main.py  requirements.txt  setup_project.py  test_local.py
app/: config.py  step1_ingest.py  step2_chunk.py  step3_embed.py  step4_retrieve.py  step5_report.py  step6_summary.py
frontend/: package-lock.json
frontend/frontend/: index.html  package-lock.json  package.json
genai-report-generator/: .gitignore  README.md  pyproject.toml  run_backend.py
genai-report-generator/config/: settings.yaml
genai-report-generator/scripts/: create_complex_excel.py  create_test_pdf.py  generate_complex_docx.py  generate_full_report.py  generate_messy_csv.py  generate_messy_docx.py  generate_test_pdf.py  test_ingest.py  test_pdf_scanner.py  test_sanitizer.py
genai-report-generator/src/: app_api.py
genai-report-generator/src/app/: main.py
genai-report-generator/src/app/core/: logger.py
genai-report-generator/src/engine/: llm.py
genai-report-generator/src/engine/agents/: analyst.py  inspector.py  scanner.py  writer.py
genai-report-generator/src/engine/prompts/: analyst.yaml  analyst_financial.yaml  analyst_operational.yaml  writer.yaml
genai-report-generator/src/engine/tools/: code_executor.py
genai-report-generator/src/rag/: embeddings.py  file_loader.py  ingestion.py  vector.py  vector_store.py
genai-report-generator/src/rag/parsers/: docx_parser.py  pdf_parser.py
genai-report-generator/src/utils/: data_sanitizer.py  data_utils.py  image_extractor.py  pdf_utils.py  viz_utils.py
src/: main.py
(+8 files in other folders)
